Fix query-building of conceptual terms with associations
To test that case, the QuerqyQueryExpanderBuilder was extracted