@@ -1,12 +1,15 @@
 package de.cxp.ocs.elasticsearch.model.query;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.List;
 import java.util.stream.Collectors;
 
 import de.cxp.ocs.elasticsearch.model.term.QueryStringTerm;
+import de.cxp.ocs.elasticsearch.model.term.WeightedTerm;
 import de.cxp.ocs.elasticsearch.model.util.QueryStringUtil;
 import de.cxp.ocs.elasticsearch.model.visitor.QueryTermVisitor;
 import lombok.Getter;
+import lombok.NonNull;
 
 /**
  * A term that consists of several terms that belong together.
@@ -15,15 +18,20 @@ import lombok.Getter;
  */
 public class MultiTermQuery implements AnalyzedQuery {
 
+	@NonNull
+	private final Collection<String> inputTerms;
+
 	@Getter
 	private final List<QueryStringTerm> terms;
 
-	public MultiTermQuery(QueryStringTerm... terms) {
-		this.terms = Collections.unmodifiableList(Arrays.asList(terms));
+	public MultiTermQuery(Collection<WeightedTerm> terms) {
+		inputTerms = terms.stream().map(QueryStringTerm::getRawTerm).collect(Collectors.toList());
+		this.terms = List.copyOf(terms);
 	}
 
-	public MultiTermQuery(Collection<QueryStringTerm> terms) {
-		this.terms = Collections.unmodifiableList(new ArrayList<>(terms));
+	public MultiTermQuery(Collection<String> keySet, Collection<QueryStringTerm> analyzedTerms) {
+		this.inputTerms = keySet;
+		this.terms = List.copyOf(analyzedTerms);
 	}
 
 	@Override
@@ -38,7 +46,7 @@ public class MultiTermQuery implements AnalyzedQuery {
 
 	@Override
 	public List<String> getInputTerms() {
-		return terms.stream().map(QueryStringTerm::getRawTerm).collect(Collectors.toList());
+		return List.copyOf(inputTerms);
 	}
 
 	@Override
